init.qcom.rc: rename to jactivelte

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -47,7 +47,7 @@ on init
 
 on fs
     mount_all fstab.qcom
-    setprop ro.product.name jgedlteue
+    setprop ro.product.name jactivelte
 
 on post-fs-data
     # Create directories for tombstone
