--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -69,6 +69,9 @@ on post-fs-data
     # Create directory for CNE
     mkdir /data/connectivity 0771 system system
 
+	# Create folder for mm-qcamera-daemon
+    mkdir /data/misc/camera 0770 camera camera
+	
     # Create directory for H2K
     mkdir /data/misc/radio/hatp 0775 radio system
     chmod 0644 /efs/h2k.dat
