--- a/audio/audio_effects.conf
+++ b/audio/audio_effects.conf
@@ -21,7 +21,7 @@ libraries {
   loudness_enhancer {
     path /system/lib/soundfx/libldnhncr.so
   }
-  audio_pre_processing {
+  qcom_pre_processing {
     path /system/lib/soundfx/libqcomvoiceprocessing.so
   }
 }
@@ -87,7 +87,7 @@ effects {
     uuid fa415329-2034-4bea-b5dc-5b381c8d1e2c
   }
   aec {
-    library audio_pre_processing
+    library qcom_pre_processing
     uuid 0f8d0d2a-59e5-45fe-b6e4-248c8a799109
   }
 }
