--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -133,7 +133,11 @@ on enable-low-power
     write /sys/devices/platform/msm_sdcc.3/idle_timeout 10
 
 on boot
-    trigger enable-low-power
+
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 1134000
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_min_freq 1134000
+    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_min_freq 1134000
+    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_min_freq 1134000
 
 on property:init.svc.recovery=running
     trigger enable-low-power
@@ -151,7 +155,15 @@ on property:recovery.perf.mode=0
     write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor interactive
 
 on property:dev.bootcomplete=1
-    setprop sys.io.scheduler bfq
+    setprop sys.io.scheduler row
 
+    
+    write /sys/module/cpu_boost/parameters/input_boost_ms 10
+    
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1458000
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_max_freq 1458000
+    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_max_freq 1458000
+    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_max_freq 1458000
+    
     rm /data/system/perfd/default_values
-    start mpdecision
+
