--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -133,11 +133,7 @@ on enable-low-power
     write /sys/devices/platform/msm_sdcc.3/idle_timeout 10
 
 on boot
-
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 1134000
-    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_min_freq 1134000
-    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_min_freq 1134000
-    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_min_freq 1134000
+    trigger enable-low-power
 
 on property:init.svc.recovery=running
     trigger enable-low-power
@@ -155,15 +151,7 @@ on property:recovery.perf.mode=0
     write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor interactive
 
 on property:dev.bootcomplete=1
-    setprop sys.io.scheduler row
+    setprop sys.io.scheduler bfq
 
-    
-    write /sys/module/cpu_boost/parameters/input_boost_ms 10
-    
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1458000
-    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_max_freq 1458000
-    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_max_freq 1458000
-    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_max_freq 1458000
-    
     rm /data/system/perfd/default_values
-
+    start mpdecision
