--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -163,8 +163,8 @@ on boot
     chmod 0660 /dev/ttyHS0
     chown bluetooth bluetooth /proc/bluetooth/sleep/lpm
     chown bluetooth bluetooth /proc/bluetooth/sleep/btwrite
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
-    chown bluetooth bluetooth /dev/ttyHS0
+    chown bluetooth net_bt /sys/class/rfkill/rfkill0/state
+    chown bluetooth net_bt /dev/ttyHS0
 
     # Create QMUX daemon socket area
     mkdir /dev/socket/qmux_audio 2770 media audio
