i9295: init: fix wifi calibration
Enable macloader to load the correct nvram calibration
data matching the hardware variant.  Since macloader
writes files in /data it needs to rerun after decryption,
requiring running during late_start. Additionally,
calibration data needs to be reloaded every time the driver
is reloaded.

Note that /sys/module/dhd/parameters/nvram_path is cleared
after the driver has accepted the input, you can use
"dhdutil -a wlan0 vars" to confirm that the calibration
data has been applied.
Original commit: 915c07d37c9953916df24f570a28dcc0ca89703c

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -487,7 +487,7 @@ service wpa_supplicant /system/bin/wpa_supplicant -g@android:wpa_wlan0 \
     oneshot
 
 service macloader /system/bin/macloader
-    class main
+    class late_start
     oneshot
     seclabel u:r:macloader_exec:s0
 
@@ -503,6 +503,9 @@ service thermal-engine /system/bin/thermal-engine
     class main
     user root
     group root
+	
+on property:wlan.driver.status=ok
+    start macloader
 
 # Disable boot timeout for external modems
 on property:persist.sys.mdm.timeout_disable=1
