--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -149,7 +149,7 @@
 
 # Bluetooth
 /dev/btlock               0660   bluetooth  bluetooth
-/dev/ttyHS0               0660   bluetooth  net_bt_stack
+/dev/ttyHS0               0660   bluetooth  net_bt
 
 # DVB
 /dev/dvb/adapter0/demux*  0444   media      media
