add fastcharge config

--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -131,6 +131,11 @@ on enable-low-power
     write /sys/class/kgsl/kgsl-3d0/pwrscale/trustzone/governor ondemand
 
     write /sys/devices/platform/msm_sdcc.3/idle_timeout 10
+    
+    write /sys/kernel/fast_charge/force_fast_charge 1
+    write /sys/kernel/fast_charge/usb_charge_level 1000
+    write /sys/kernel/fast_charge/ac_charge_level 1900
+    write /sys/kernel/fast_charge/screen_on_current_limit 0
 
 on boot
     trigger enable-low-power
