--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -449,7 +449,7 @@ service irsc_util /system/bin/irsc_util "/etc/sec_config"
 service qmuxd /system/bin/qmuxd
     class main
     user root
-    group radio audio bluetooth gps log
+    group radio audio bluetooth wakelock gps log
 
 service netmgrd /system/bin/netmgrd
     class main
