--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -49,6 +49,9 @@ on fs
     mount_all fstab.qcom
     setprop ro.product.name jactivelte
 
+    chown system radio /dev/block/platform/msm_sdcc.1/by-name
+    chmod 0775 /dev/block/platform/msm_sdcc.1/by-name
+
 on post-fs-data
     # Create directories for tombstone
     mkdir /data/tombstones 0771 system system
